deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springapp-deployment
  labels:
    app: springapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springapp
  template:
    metadata:
      labels:
        app: springapp
    spec:
      containers:
      - name: springapp
        image: andrewlozoya/springapp:3.0
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: newrelic # newrelic agent
          mountPath: "/opt/app/newrelic"
        - name: config-volume 
          mountPath: "/etc/config"
      volumes:
      - name: newrelic
        hostPath:
         path: /opt/app/newrelic
      - name: config-volume
        configMap:
          # Provide the name of the ConfigMap containing the New Relic config file you want
          # to add to the container
          name: newrelic-config
